--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.35.3",
+    "@tailwindcss/forms": "^0.5.0",
     "next": "12.1.4",
     "react": "18.0.0",
+    "react-data-grid": "^7.0.0-beta.13",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
-    "eslint-config-next": "12.1.4"
+    "eslint-config-next": "12.1.4",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.23"
   }
 }
